Removed Vert.x usage from `DefaultKafkaQuotasManager` class (#12946)
Signed-off-by: Paolo Patierno <ppatierno@live.com>